Set all version numbers to 0.6.0. I hope I forgot none.
git-svn-id: http://svn.code.sf.net/p/podofo/code/podofo/branches/PODOFO_0_6_BRANCH@831 e6e4d1b7-ffb3-4f57-9d89-6d52b3892af5

--- a/README.html
+++ b/README.html
@@ -95,7 +95,7 @@ Qt application for browsing and modifying the objects in a PDF file, examining
 the structure of PDF files, and manipulating PDF streams. It is very useful if
 you want to look on the internal structure of PDF files.</p>
 
-<p>As of version 0.5.99 (ie pre-0.6.0 svn trunk) PoDoFo is available for Unix, Mac
+<p>As of version 0.6.0 PoDoFo is available for Unix, Mac
 OS X and Windows platforms.</p>
 
 <h2><a name="where_can_i_get_it" />Where can I can get it?</h2>
