FIXED: A spelling error
git-svn-id: http://svn.code.sf.net/p/podofo/code/podofo/branches/PODOFO_0_6_BRANCH@855 e6e4d1b7-ffb3-4f57-9d89-6d52b3892af5

--- a/README.html
+++ b/README.html
@@ -19,9 +19,9 @@
 		<li><a href="#boost_support">Boost support</a>
 		<li><a href="#installation_with_cmake">Installation with CMake</a>
 		<ol>
-			<li><a href="#cmake_builds_on_linux_unix">CMake bulds on Linux/UNIX</a></li>
-			<li><a href="#cmake_builds_on_mac_os_x">CMake bulds on Mac OS X</a></li>
-			<li><a href="#cmake_builds_on_windows">CMake bulds on Windows</a></li>
+			<li><a href="#cmake_builds_on_linux_unix">CMake builds on Linux/UNIX</a></li>
+			<li><a href="#cmake_builds_on_mac_os_x">CMake builds on Mac OS X</a></li>
+			<li><a href="#cmake_builds_on_windows">CMake builds on Windows</a></li>
 		</ol>
 		</li>
 	</ol>
@@ -95,7 +95,7 @@ Qt application for browsing and modifying the objects in a PDF file, examining
 the structure of PDF files, and manipulating PDF streams. It is very useful if
 you want to look on the internal structure of PDF files.</p>
 
-<p>As of version 0.6.0 PoDoFo is available for Unix, Mac
+<p>As of version 0.5.99 (ie pre-0.6.0 svn trunk) PoDoFo is available for Unix, Mac
 OS X and Windows platforms.</p>
 
 <h2><a name="where_can_i_get_it" />Where can I can get it?</h2>
@@ -178,8 +178,8 @@ platforms. The CMake build has been tested on:</p>
 
 <ul>
 <li>Visual C++ 9 Express Edition [Win32] ("Visual Studio 9 2008" target)</li>
-<li>Visual C++ 8 Express Edition [Win32] ("Visual Studio 8 2005" target)</li>
-<li>Visual C++ 8 Express +NMake [Win32] ("NMake Makefiles" target)</li>
+<li>Visual C++ 8 Express Edition [Win32] ("Visual Studio 8 2005" target) (needs additional setup)</li>
+<li>Visual C++ 8 Express +NMake [Win32] ("NMake Makefiles" target) (needs additional setup)</li>
 <li>MinGW with GCC 3.4.2 [Win32] ("MinGW Makefiles" target)</li>
 <li>gcc 3.3.5 [Linux: Debian 3.1] ("Unix Makefiles" target)</li>
 <li>gcc 4.0, 4.1, 4.2 [Linux: Debian 4.0] ("Unix Makefiles" target)</li>
@@ -257,10 +257,10 @@ cmake -G "Unix Makefiles" ../podofo-src \
 	-DPODOFO_BUILD_STATIC:BOOL=FALSE
 </pre>
 
-<p>By default, with CMake 2.5.x all supported library types will be built where
+<p>By default, with CMake 2.6.x all supported library types will be built where
 possible. Only the shared library will be built by default using 2.4.x because
 of a CMake limitation; you can build a static library instead with
-<code>-DPODOFO_BUILD_STATIC:BOOL=TRUE</code>, or upgrade to CMake 2.5.x .</p>
+<code>-DPODOFO_BUILD_STATIC:BOOL=TRUE</code>, or upgrade to CMake 2.6.x .</p>
 
 <p>Note that the instructions above run an out-of-tree build. CMake does support
 in-tree builds, but the use of out-of-tree builds is very strongly recommended.</p>
@@ -360,28 +360,48 @@ instead of running `make' and `make install' just open the project file and work
 
 <h4><a name="cmake_builds_on_windows" />CMake builds on Windows</h4>
 
+<h5><a name="windows_dependencies"/>Windows Dependencies</h5>
 
-<p>Building CMake on Windows can be done using MinGW (a minimalist gcc-based
+<p>PoDoFo requires a couple of other open source libraries to work. At minimum it needs zlib and libjpeg. Additional functionality is enabled if libtiff and/or openssl are available.</p>
+
+<h6><a name="windows_dependency_zlib">zlib</h6>
+
+<p>Both MinGW and Visual Studio users should use the standard precompiled zlib dll from <a href="http://zlib.org">zlib.org</a>. There is no need to compile your own.</p>
+
+<p>Remember that you must ship <code>zlib1.dll</code> with your application. During testing it must be in the same directory as the PoDoFo-using executable or the directory containing it must be on your system PATH.</p>
+
+<h6><a name="windows_dependency_libjpeg"/>libjpeg</h6>
+
+<p>MinGW users can download the latest libjpeg installer from <a href="http://gnuwin32.sf.net">GnuWin32</a></p>.
+
+<p>For Visual Studio you will need to build libjpeg with your version of Visual Studio. Download the libjpeg sources from <a href="http://www.ijg.org/">http://www.ijg.org/</a> and unpack them into a working directory. I'll assume you've used <code>C:\Developer\jpeg</code>. Once the sources are unpacked, start a visual studio command prompt and cd into <code>c:\developer\jpeg</code> then run <code>nmake /f makefile.vc /a</code></p>.
+
+<p>If you use a DLL build of libjpeg remember that you must ship the DLL with your application. During testing the libjpeg dll must be in the same directory as the PoDoFo-using executable or the directory containing it must be on your system PATH. These requirements do not apply to the (recommended) static library libjpeg.</p>
+
+<h5><a name="windows_podofo"/>Building PoDoFo on Windows</h5>
+
+<p>Building PoDoFo on Windows can be done using MinGW (a minimalist gcc-based
 compliler environment for Windows) or Visual Studio. Other methods may work but
 have not been tested.</p>
 
-<p>CMake 2.5 is required for Windows. You can download the latest 2.5 snapshot from
-cmake.org: <a href="http://www.cmake.org/files/vCVS/">http://www.cmake.org/files/vCVS/</a></p>.
+<p>CMake 2.6.x is required for Windows. You can download it from
+ <a href="http://www.cmake.org/HTML/Download.html">cmake.org</a></p>.
 
-<p>Because the C++ ABIs of most of the win32 compilers are incompatible, you must
-build PoDoFo with the same compiler and version that you will use to build the
-programs linked to PoDoFo. Failure to follow this restriction will result in
-link errors at best, and bizarre runtime failures at worst.</p>
+<p>Because the C++ ABIs of most of the win32 compilers are incompatible, you
+must build PoDoFo with the same compiler and version that you will use to build
+the programs linked to PoDoFo. Failure to follow this restriction will result
+in link errors at best, and bizarre runtime failures at worst.</p>
 
-<p>On Windows, if you are linking against a shared (DLL) build of PoDoFo you MUST
-define the preprocessor macro <code>USING_SHARED_PODOFO</code> when including any podofo
-headers. Failure to do so will result in link time and/or runtime errors.
-Similarly, defining it when linking with a static PoDoFo can cause problems.</p>
+<p>On Windows, if you are linking against a shared (DLL) build of PoDoFo you
+MUST define the preprocessor macro <code>USING_SHARED_PODOFO</code> when
+including any podofo headers. Failure to do so will result in link time and/or
+runtime errors.  Similarly, defining it when linking with a static PoDoFo can
+cause problems.</p>
 
-<p>On Windows, PoDoFo may be built as either a shared or static library. Building
-both is not supported. By default only the shared library will be built. If you
-want a static library, just disable generation of the shared library with the
-extra argument to cmake:</p>
+<p>On Windows, PoDoFo may be built as either a shared or static library.
+Building both is not supported. By default only the shared library will be
+built. If you want a static library, just disable generation of the shared
+library with the extra argument to cmake:</p>
 
 <pre>
 	-DPODOFO_BUILD_SHARED=FALSE
@@ -390,8 +410,8 @@ extra argument to cmake:</p>
 <p>PoDoFo will generally work correctly if you download pre-built libraries,
 such as those published by the GnuWin32 project, even if they were built with a
 different compiler. The primary exception is freetype, which should if at all
-possible be built using your compiler. Freetype provides a VC++ project file and is
-very easy to build. Make sure to build both the debug multi-threaded and
+possible be built using your compiler. Freetype provides a VC++ project file
+and is very easy to build. Make sure to build both the debug multi-threaded and
 release multi-threaded versions.</p>
 
 <p>For release you should generally build your own copy of these libraries
@@ -402,10 +422,10 @@ PoDoFo it's safe not to use its' workarounds for incompatible runtimes.</p>
 
 <h5><a name="handling_library_naming_on_win32" />Handling library naming on win32</h5>
 
-<p>Especially on Windows it is also common for custom built libraries to have different
-names to those you might download as pre-built copies. CMake won't be able to find
-them if they're called something else unless you tell it. Use these variables to tell CMAke
-what names to look for a library under:</p>
+<p>Especially on Windows it is also common for custom built libraries to have
+different names to those you might download as pre-built copies. CMake won't be
+able to find them if they're called something else unless you tell it. Use
+these variables to tell CMake what names to look for a library under:</p>
 
 <ul>
 	<li>FREETYPE_LIBRARY_NAMES_DEBUG, FREETYPE_LIBRARY_NAMES_RELEASE and FREETYPE_LIBRARY_NAMES</li>
@@ -415,8 +435,6 @@ what names to look for a library under:</p>
 </ul>
 
 <p>For example, a cmake command line might include -DFREETYPE_LIBRARY_NAMES_DEBUG=freetype235MT_D -DFREETYPE_LIBRARY_NAMES_RELEASE=freetype235MT . If you only have the release library, just use -DFREETYPE_LIBRARY_NAMES . Telling CMake which are debug and release libraries helps it ensure you link to the right libraries depending on build type, but that does no good if you don't have a debug library.</p>
-
-<p>Now, a quick tip for Windows users: consider getting Microsoft PowerShell from <a href="http://www.microsoft.com/windowsserver2003/technologies/management/powershell/download.mspx">microsoft</a> and using it instead of <code>cmd.exe</code>. It's a big improvement, and will help preserve UNIX users' sanity too.</p>
 
 <h5><a name="cmake_builds_on_windows_with_mingw" />CMake builds on Windows with MinGW</h5>
 
@@ -460,7 +478,7 @@ will work OK, if a bit slower, despite being built with gcc).  It is preferable
 to build your own copies of freetype, libjpeg and libtiff with your own
 compiler and bundle those copies.</p>
 
-<p>You'll also need CMake 2.5.</p>
+<p>You'll also need CMake 2.6.</p>
 
 <p>If you're using Visual Studio you really should build your own freetype.
 With recent VC++ versions the GnuWin32 version of freetype is unlikely to work
@@ -482,9 +500,9 @@ tends to get rather long. Here's an example that assumes the
 <pre>
 del cmakecache.txt
 set FTDIR=C:\developer\freetype-2.3.5
-set JPEGDIR=C:\Developer\GnuWin32\jpeg
+set JPEGDIR=C:\Developer\jpeg
 set ZLIBDIR=C:\developer\zlib123-dll
-cmake -G "Visual Studio 9 2008" ..\podofo-src -DCMAKE_INCLUDE_PATH="%FTDIR%\include;%JPEGDIR%\include;%ZLIBDIR%\include" -DCMAKE_LIBRARY_PATH="%FTDIR%\lib;%FTDIR%\objs;%JPEGDIR%\lib;%ZLIBDIR%\lib" -DPODOFO_BUILD_SHARED:BOOL=FALSE -DFREETYPE_LIBRARY_NAMES_DEBUG=freetype235MT_D -DFREETYPE_LIBRARY_NAMES_RELEASE=freetype235MT
+cmake -G "Visual Studio 9 2008" ..\podofo-src -DCMAKE_INCLUDE_PATH="%FTDIR%\include;%JPEGDIR%\include;%JPEGDIR%;%ZLIBDIR%\include" -DCMAKE_LIBRARY_PATH="%FTDIR%\lib;%FTDIR%\objs;%JPEGDIR%\lib;%JPEGDIR%;%ZLIBDIR%\lib" -DPODOFO_BUILD_SHARED:BOOL=FALSE -DFREETYPE_LIBRARY_NAMES_DEBUG=freetype235MT_D -DFREETYPE_LIBRARY_NAMES_RELEASE=freetype235MT
 </pre>
 
 <p>Run the saved <code>build.cmd</code> from a cmd.exe window. If all goes well, you can open and build the generated <code>podofo.sln</code> in Visual Studio and build it.</p>
@@ -493,10 +511,7 @@ cmake -G "Visual Studio 9 2008" ..\podofo-src -DCMAKE_INCLUDE_PATH="%FTDIR%\incl
 shouldn't need any special settings unless you have an unusual setup or more
 than copy of the same version of Visual Studio installed.</p>
 
-<p>You can get the Visual C++ Express Edition 9 from <a href="http://msdn.microsoft.com/vstudio/express/">MSDN</a>.
-If you're using the version 8 instead of 9, you'll need to install the <a href="http://www.microsoft.com/downloads/details.aspx?FamilyId=A55B6B43-E24F-4EA3-A93E-40C0EC4F68E5&displaylang=en">win32 SDK</a> as well,
-since it's not bundled. This is not required for version 9 of the C++ Express
-Edition.</p>
+<p>You can download the free Visual C++ Express Edition 9 from <a href="http://www.microsoft.com/express/">Microsoft</a>.</p>
 
 <b>PROBLEMS?</b>
 
